--- a/STTTS/UI/Views/NumberInputView.axaml
+++ b/STTTS/UI/Views/NumberInputView.axaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="STTTS.UI.Views.AudioDeviceSelectorView"
+<UserControl x:Class="STTTS.UI.Views.NumberInputView"
 			 xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,22 +6,16 @@
 			 xmlns:vm="using:STTTS.UI.ViewModels"
              mc:Ignorable="d"
 			 x:CompileBindings="True"
-			 x:DataType="vm:AudioDeviceSelectorViewModel">
+			 x:DataType="vm:NumberInputViewModel">
 	<StackPanel Margin="10,0,0,0"
 				Orientation="Horizontal">
 		<TextBlock TextAlignment="Left"
 				   VerticalAlignment="Center"
-				   Text="{Binding AudioDeviceType}"
+				   Text="{Binding Label}"
 				   Width="250" />
-		<ComboBox ItemsSource="{Binding Devices}"
-				  SelectedIndex="{Binding SelectedDeviceIndex}"
-				  HorizontalAlignment="Center"
-				  Width="350" >
-			<ComboBox.ItemTemplate>
-				<DataTemplate>
-					<TextBlock Text="{Binding FriendlyName}" />
-				</DataTemplate>
-			</ComboBox.ItemTemplate>
-		</ComboBox>
+		<NumericUpDown Value="{Binding Value}"
+					   Increment="1"
+					   Minimum="1"
+					   Maximum="100000" />
 	</StackPanel>
 </UserControl>
